master review done

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objectives:\n",
+    "## Objectives\n",
     "You will be able to:\n",
     "- Understand the role of Apache Spark in Big Data analytics \n",
     "- Get an understanding of Apache spark stack allowing abstraction of data and computation\n",
@@ -32,7 +32,7 @@
     "### Big data analytics on Apache Spark\n",
     "- International Journal of Data Science and Analytics\n",
     "- November 2016, Volume 1, Issue 3–4, pp 145–164\n",
-    "- Salman SalloumEmail authorRuslan DautovXiaojun ChenPatrick Xiaogang PengJoshua Zhexue Huang\n",
+    "- Authors: Salman Salloum, Ruslan Dautov, Xiaojun Chen, Patrick Xiaogang Peng, Joshua Zhexue Huang\n",
     "\n",
     "The article is available at \n",
     "https://link.springer.com/article/10.1007/s41060-016-0027-9\n",
@@ -45,11 +45,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lesson, you read the scientific article \"Big data Analytics on Apache Spark\", which covers the key aspects of Spark's computational environment."
+   ]
   }
  ],
  "metadata": {
