--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Big data analytics on Apache Spark\n",
+    "# Big Data Analytics on Apache Spark\n",
     "\n",
     "## Introduction\n",
     "\n",
